# gUMlosoApp

./: README.md
gUMloso/: build.gradle  settings.gradle
gUMloso/app/: build.gradle  secrets.gradle
gUMloso/app/src/main/: AndroidManifest.xml
gUMloso/app/src/main/res/drawable/: edit_text_background.xml  ic_baseline_keyboard_arrow_down_24.xml  layout_corners_shape.xml  rounded_moldura.xml
gUMloso/app/src/main/res/layout/: activity_choose_type.xml  activity_criar_reserva.xml  activity_edit_manager_profile.xml  activity_edit_profile_user.xml  activity_edit_restaurant.xml  activity_gestao_reservas.xml  activity_main.xml  activity_maps.xml  activity_register_rest.xml  item_scroll.xml  main_page.xml  register_activity.xml  reservation_item.xml  restaurant_view.xml
gUMloso/app/src/main/res/menu/: bottom_menu.xml
gUMloso/app/src/main/res/mipmap-anydpi-v26/: icon_gumloso_round.xml
gUMloso/app/src/main/res/values/: colors.xml  map_icon_background.xml  strings.xml  themes.xml
src/backend/: Cargo.toml  Rocket.toml  gUMlosoDB.sql
src/backend/src/: auth.rs  bing_helpers.rs  error.rs  main.rs
src/backend/src/api/: catchers.rs  customers.rs  managers.rs  mod.rs
src/backend/src/db/: mod.rs  schema.rs
src/backend/src/db/models/: customers.rs  managers.rs  mod.rs  reservations.rs  restaurants.rs  reviews.rs
src/gUMloso/: build.gradle  local.properties  settings.gradle
src/gUMloso/app/: build.gradle  secrets.gradle
src/gUMloso/app/src/main/: AndroidManifest.xml
src/gUMloso/gradle/wrapper/: gradle-wrapper.properties
(+63 files in other folders)
