[package]
name = "backend"
version = "0.1.0"
authors = ["zer0-5 <guilherme2001fernandes@hotmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4", features = ["mysql", "chrono", "numeric"] }
dotenv = "0.15"
dotenv_codegen = "0.15"
jsonwebtoken = "7.2"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["diesel_mysql_pool"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
bigdecimal = "0.1"
itertools = "0.10"
